rename levels for shadows

--- a/apps/pattern-lab/src/styles/pl.scss
+++ b/apps/pattern-lab/src/styles/pl.scss
@@ -68,7 +68,7 @@ ul.bolt-icon-list-demo {
   padding: 3px 25px 3px 3px;
   border: solid 1px black;
   margin-bottom: 15px;
-  @include bolt-shadow('l4');
+  @include bolt-shadow('level-40');
 }
 
 .bolt-shadow-demo {
