add new shadow mixin to buttons

--- a/packages/core/styles/01-settings/settings-global/_settings-global.scss
+++ b/packages/core/styles/01-settings/settings-global/_settings-global.scss
@@ -17,6 +17,7 @@ $bolt-base-font-size--max: 18px;
 $bolt-fonts--subset-loaded-class: 'js-fonts-subset-loaded' !default;
 $bolt-fonts--loaded-class: 'js-fonts-loaded' !default;
 
+// @todo Salem, we should probably deprecate these so there is only one way to do shadows
 // Shadows
 $bolt-shadow-color: bolt-color(black);
 $bolt-shadow--small: 0 2px 0.15rem rgba($bolt-shadow-color, 0.3);
