--- a/packages/global/styles/07-utilities/_utilities-shadow.scss
+++ b/packages/global/styles/07-utilities/_utilities-shadow.scss
@@ -8,10 +8,10 @@ $shadows: map-get($bolt-shadows, 'sets');
 @each $key, $value in $shadows {
   $prefix: map-get($bolt-shadows, 'utility-class-prefix');
   .#{$prefix}#{$key} {
-    @include bolt-shadow($key, $utility: true);
+    @include bolt-shadow($key, $lifted: false, $utility: true);
   }
   .#{$prefix}#{$key}--hoverable {
-    @include bolt-shadow($key, $utility: true);
+    @include bolt-shadow($key, $lifted: false, $utility: true);
     &:hover {
       @include bolt-shadow($key, $lifted: true, $utility: true);
     }
