--- a/packages/components/bolt-device-viewer/src/_device-viewer.scss
+++ b/packages/components/bolt-device-viewer/src/_device-viewer.scss
@@ -32,9 +32,9 @@ bolt-device-viewer {
 }
 
 .c-bolt-device-viewer__screen {
+  @include bolt-shadow('level-10');
   display: block;
   position: relative;
-  box-shadow: 0 0 0 3px bolt-color(black);
   z-index: bolt-z-index('contentTop'); // Must be higher than the z-index of the :before layer on the base component
   width: 100%;
   perspective: 1000px;
@@ -206,6 +206,8 @@ $bolt-magnifier-size: 350px;
 
 
 .c-bolt-image-zoom__overlay-icon {
+  @include bolt-shadow('level-60');
+
   --bolt-theme-icon-background-opacity: 0.5;
   --bolt-theme-icon-background-color: bolt-color(black);
 
@@ -218,7 +220,6 @@ $bolt-magnifier-size: 350px;
   line-height: 1;
   pointer-events: none;
 
-  box-shadow: 0 2px 5px 10px rgba(21, 22, 25, 0.025);
   border-radius: 50%;
 
   .is-mouse-leaving & {
@@ -377,6 +378,8 @@ bolt-image-zoom:hover > .c-bolt-image-zoom__overlay {
 
 
 .drift-zoom-pane {
+  @include bolt-shadow('level-60');
+
   background: rgba(0, 0, 0, 0.5);
 
   /* This is required because of a bug that causes border-radius to not
@@ -394,7 +397,6 @@ bolt-image-zoom:hover > .c-bolt-image-zoom__overlay {
   height: $bolt-magnifier-size;
   border-radius: 50%;
   border: 5px solid bolt-color(white);
-  box-shadow: 0 2px 5px 10px rgba(bolt-color(black), 0.05), 0 20px 40px 0 rgba(bolt-color(black), 0.7);
 
   img {
     object-fit: cover;
