--- a/packages/core/styles/01-settings/settings-shadow/_settings-shadow.scss
+++ b/packages/core/styles/01-settings/settings-shadow/_settings-shadow.scss
@@ -13,27 +13,27 @@ $bolt-shadows: (
     //),
     'level-10': (
       'base': '0 1px 2px 1px rgba(6,10,36,0.08)',
-      'lifted': ''
+      'raised': ''
     ),
     'level-20': (
       'base': '0 1px 4px 1px rgba(6,10,36,0.10), 0 5px 10px 0 rgba(6,10,36,0.08)',
-      'lifted': '0 1px 8px 1px rgba(6,10,36,0.18), 0 5px 10px 1px rgba(6,10,36,0.15), 0 15px 30px 0 rgba(6,10,36,0.16)'
+      'raised': '0 1px 8px 1px rgba(6,10,36,0.18), 0 5px 10px 1px rgba(6,10,36,0.15), 0 15px 30px 0 rgba(6,10,36,0.16)'
     ),
     'level-30': (
       'base': '0 1px 6px 1px rgba(6,10,36,0.10), 0 5px 5px 1px rgba(6,10,36,0.10), 0 5px 20px 0 rgba(6,10,36,0.08)',
-      'lifted': '0 1px 10px 1px rgba(6,10,36,0.10), 0 10px 10px 1px rgba(6,10,36,0.20), 0 35px 60px 0 rgba(6,10,36,0.27)'
+      'raised': '0 1px 10px 1px rgba(6,10,36,0.10), 0 10px 10px 1px rgba(6,10,36,0.20), 0 35px 60px 0 rgba(6,10,36,0.27)'
     ),
     'level-40': (
       'base': '0 1px 8px 1px rgba(6,10,36,0.18), 0 5px 10px 1px rgba(6,10,36,0.15), 0 15px 30px 0 rgba(6,10,36,0.16)',
-      'lifted': '0 1px 12px 1px rgba(6,10,36,0.10), 0 20px 20px 1px rgba(6,10,36,0.20), 0 45px 90px 0 rgba(6,10,36,0.36)'
+      'raised': '0 1px 12px 1px rgba(6,10,36,0.10), 0 20px 20px 1px rgba(6,10,36,0.20), 0 45px 90px 0 rgba(6,10,36,0.36)'
     ),
     'level-50': (
       'base': '0 1px 10px 1px rgba(6,10,36,0.10), 0 10px 10px 1px rgba(6,10,36,0.20), 0 35px 60px 0 rgba(6,10,36,0.27)',
-      'lifted': '0 1px 12px 1px rgba(6,10,36,0.10), 0 20px 20px 1px rgba(6,10,36,0.20), 0 45px 90px 0 rgba(6,10,36,0.42)'
+      'raised': '0 1px 12px 1px rgba(6,10,36,0.10), 0 20px 20px 1px rgba(6,10,36,0.20), 0 45px 90px 0 rgba(6,10,36,0.42)'
     ),
     'level-60': (
       'base': '0 1px 12px 1px rgba(6,10,36,0.10), 0 20px 20px 1px rgba(6,10,36,0.20), 0 45px 90px 0 rgba(6,10,36,0.36)',
-      'lifted': '0 1px 12px 1px rgba(6,10,36,0.10), 0 20px 20px 1px rgba(6,10,36,0.20), 0 60px 120px 0 rgba(6,10,36,0.48)'
+      'raised': '0 1px 12px 1px rgba(6,10,36,0.10), 0 20px 20px 1px rgba(6,10,36,0.20), 0 60px 120px 0 rgba(6,10,36,0.48)'
     )
   )
 );
