--- a/packages/core/styles/02-tools/tools-shadow/_tools-shadow.scss
+++ b/packages/core/styles/02-tools/tools-shadow/_tools-shadow.scss
@@ -15,7 +15,7 @@
   } @else {
     @if $lifted {
       transform: translateY(-2px) #{$important};
-      box-shadow: unquote(map-get(map-get($shadows, $key), 'lifted')) #{$important};
+      box-shadow: unquote(map-get(map-get($shadows, $key), 'raised')) #{$important};
     } @else {
       transition: all 0.3s cubic-bezier(.25,.8,.25,1) #{$important};
       box-shadow: unquote(map-get(map-get($shadows, $key), 'base')) #{$important};
