manage z-index/shadow (#494)
* add z-index variables and tools

* add z-index demo to pattern  lab

* update z-index demo

* update docs on troubleshooting

* refactor z-index mixin and function

* add mixin to sticky header

* refactor z-index settings

* refactor bolt to use z-index tools

* rename zindex function to have bolt- prefix

* add links to stick docs

* update demo of z-index in PL

* fix incorrect mixin for z shadow in pl

* refactor, add utility z-index class

* wrap up some details on docs and z-index

* refactor error msg

* remove test bad value

* add important to shadow

* rename levels for shadows

* add !important to z-index

* add new shadow mixin to buttons

* replace old shadows with bolt shadow in device viewer component, where applicable

* change lifted to raised in shadow settings

--- a/apps/pattern-lab/src/styles/pl.scss
+++ b/apps/pattern-lab/src/styles/pl.scss
@@ -23,7 +23,7 @@ bolt-demo {
   background-color: bolt-color(white);
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: bolt-z-index("nav");
   margin-bottom: 0;
   margin-left: -1 * bolt-spacing(medium);
   margin-right: -1 * bolt-spacing(medium);
@@ -61,6 +61,14 @@ ul.bolt-icon-list-demo {
       width: 50%;
     }
   }
+}
+
+.bolt-z-index-demo {
+  display: inline-block;
+  padding: 3px 25px 3px 3px;
+  border: solid 1px black;
+  margin-bottom: 15px;
+  @include bolt-shadow('level-40');
 }
 
 .bolt-shadow-demo {
