--- a/packages/components/bolt-action-blocks/src/action-blocks.scss
+++ b/packages/components/bolt-action-blocks/src/action-blocks.scss
@@ -127,7 +127,7 @@ bolt-action-blocks {
   border-right-style: $bolt-action-blocks-border-style;
   display: block;
   position: absolute;
-  z-index: 0;
+  z-index: bolt-z-index('background');
   top: 0;
   left: 0;
   width: 100%;
