--- a/packages/components/bolt-background/src/background.scss
+++ b/packages/components/bolt-background/src/background.scss
@@ -78,7 +78,7 @@ $bolt-bg-shape-offset-side-large: $bolt-bg-shape-offset-bottom-large * 1.2;
 }
 
 .c-bolt-background__video {
-  z-index: 10;
+  z-index: bolt-z-index('backgroundTop');
   transition: opacity 0.4s ease, min-height 0.4s ease, max-height 0.4s ease;
   top: 0;
   right: 0;
