--- a/packages/core/styles/01-settings/settings-shadow/_settings-shadow.scss
+++ b/packages/core/styles/01-settings/settings-shadow/_settings-shadow.scss
@@ -1,36 +1,39 @@
-// These values can be applied using the mixins, functions, and utility classes
-// see _tools-shadow.scss
-// see _utilities-shadow.scss
+/* ------------------------------------ *\
+  SHADOW SETTINGS
+  see _tools-shadow.scss
+  see _utilities-shadow.scss
+\* ------------------------------------ */
+
 $bolt-shadows: (
   'utility-class-prefix': 'u-bolt-shadow--',
   'sets': (
     //'b1': (
     //  'base': 'inset 0 1px 3px rgba(0,0,0,0.12), inset 0 1px 2px rgba(0,0,0,0.24)',
-    //  'hover': ''
+    //  'lifted': ''
     //),
-    'l1': (
+    'level-10': (
       'base': '0 1px 2px 1px rgba(6,10,36,0.08)',
-      'hover': ''
+      'raised': ''
     ),
-    'l2': (
+    'level-20': (
       'base': '0 1px 4px 1px rgba(6,10,36,0.10), 0 5px 10px 0 rgba(6,10,36,0.08)',
-      'hover': '0 1px 8px 1px rgba(6,10,36,0.18), 0 5px 10px 1px rgba(6,10,36,0.15), 0 15px 30px 0 rgba(6,10,36,0.16)'
+      'raised': '0 1px 8px 1px rgba(6,10,36,0.18), 0 5px 10px 1px rgba(6,10,36,0.15), 0 15px 30px 0 rgba(6,10,36,0.16)'
     ),
-    'l3': (
+    'level-30': (
       'base': '0 1px 6px 1px rgba(6,10,36,0.10), 0 5px 5px 1px rgba(6,10,36,0.10), 0 5px 20px 0 rgba(6,10,36,0.08)',
-      'hover': '0 1px 10px 1px rgba(6,10,36,0.10), 0 10px 10px 1px rgba(6,10,36,0.20), 0 35px 60px 0 rgba(6,10,36,0.27)'
+      'raised': '0 1px 10px 1px rgba(6,10,36,0.10), 0 10px 10px 1px rgba(6,10,36,0.20), 0 35px 60px 0 rgba(6,10,36,0.27)'
     ),
-    'l4': (
+    'level-40': (
       'base': '0 1px 8px 1px rgba(6,10,36,0.18), 0 5px 10px 1px rgba(6,10,36,0.15), 0 15px 30px 0 rgba(6,10,36,0.16)',
-      'hover': '0 1px 12px 1px rgba(6,10,36,0.10), 0 20px 20px 1px rgba(6,10,36,0.20), 0 45px 90px 0 rgba(6,10,36,0.36)'
+      'raised': '0 1px 12px 1px rgba(6,10,36,0.10), 0 20px 20px 1px rgba(6,10,36,0.20), 0 45px 90px 0 rgba(6,10,36,0.36)'
     ),
-    'l5': (
+    'level-50': (
       'base': '0 1px 10px 1px rgba(6,10,36,0.10), 0 10px 10px 1px rgba(6,10,36,0.20), 0 35px 60px 0 rgba(6,10,36,0.27)',
-      'hover': '0 1px 12px 1px rgba(6,10,36,0.10), 0 20px 20px 1px rgba(6,10,36,0.20), 0 45px 90px 0 rgba(6,10,36,0.42)'
+      'raised': '0 1px 12px 1px rgba(6,10,36,0.10), 0 20px 20px 1px rgba(6,10,36,0.20), 0 45px 90px 0 rgba(6,10,36,0.42)'
     ),
-    'l6': (
+    'level-60': (
       'base': '0 1px 12px 1px rgba(6,10,36,0.10), 0 20px 20px 1px rgba(6,10,36,0.20), 0 45px 90px 0 rgba(6,10,36,0.36)',
-      'hover': '0 1px 12px 1px rgba(6,10,36,0.10), 0 20px 20px 1px rgba(6,10,36,0.20), 0 60px 120px 0 rgba(6,10,36,0.48)'
+      'raised': '0 1px 12px 1px rgba(6,10,36,0.10), 0 20px 20px 1px rgba(6,10,36,0.20), 0 60px 120px 0 rgba(6,10,36,0.48)'
     )
   )
 );
