--- a/apps/pattern-lab/src/_patterns/02-components/sticky/00-sticky-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/sticky/00-sticky-docs.twig
@@ -14,4 +14,14 @@
   schema: schema,
   code: code,
   readmeFile: '@bolt-components-sticky/README.md',
+  links: [
+    {
+      url: link['sticky-simple-example'],
+      text: 'Sticky Simple Example'
+    },
+    {
+      url: link['sticky-with-content-example'],
+      text: 'Sticky w/ Content Example'
+    }
+  ]
 } only %}
