--- a/packages/components/bolt-video/src/_videojs-enhancements.scss
+++ b/packages/components/bolt-video/src/_videojs-enhancements.scss
@@ -80,7 +80,7 @@
 .video-js .vjs-modal-dialog {
   overflow: auto; // so psuedo layer below shows up
   box-sizing: border-box;
-  z-index: 100;
+  z-index: bolt-z-index('nav');
   max-width: 768px;
   margin: 0 auto;
   overflow: visible; // override default overflow: hidden
