Implementing new schema method on Action Blocks

--- a/apps/pattern-lab/src/_patterns/02-components/action-blocks/00-action-blocks-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/action-blocks/00-action-blocks-docs.twig
@@ -1,4 +1,5 @@
-{% set schema = get_data('@bolt-components-action-blocks/action-blocks.schema.yml') %}
+{% set schema = bolt.data.components['@bolt-components-action-blocks'].schema %}
+
 {% set code %} {% verbatim %}
 {% include "@bolt-components-action-blocks/action-blocks.twig" with {
   contentItems: [
