--- a/apps/pattern-lab/src/_patterns/02-components/action-blocks/20-action-blocks-theme-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/action-blocks/20-action-blocks-theme-variation.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-action-blocks/action-blocks.schema.yml') %}
+{% set schema = bolt.data.components['@bolt-components-action-blocks'].schema %}
 
 {% for theme in schema.properties.theme.enum %}
   <p>Theme: {{ theme }}</p>
