fix: adding video player demos to PL, fixing issues with video player sass compiling

--- a/packages/components/bolt-video/src/_video.scss
+++ b/packages/components/bolt-video/src/_video.scss
@@ -1,4 +1,6 @@
 @import '@bolt/core';
+@import '@bolt/components-button/src/button.settings';
+@import '@bolt/components-button/src/button.mixins';
 
 @import 'videojs-enhancements';
 
