Feature/add video to pl (#491)
* add video component to patternlab

* fix: adding video player demos to PL, fixing issues with video player sass compiling

--- a/packages/components/bolt-brightcove-player/src/brightcove-player.scss
+++ b/packages/components/bolt-brightcove-player/src/brightcove-player.scss
@@ -1,4 +1,4 @@
-@import "@bolt/core";
+@import '@bolt/core';
 
 brightcove-player {
   display: block;
@@ -190,5 +190,5 @@ bolt-video {
 // is-visible
 // transform: translateX(0);
 // transition: all .6s cubic-bezier(.5, -.25, .5, 2) 1s;
-// z-index: bolt-z-index('nav');
+// z-index: 100;
 // opacity: .8;
