Share - WIP main share component work

--- a/apps/pattern-lab/src/_patterns/02-components/share/00-share-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/share/00-share-docs.twig
@@ -5,7 +5,8 @@
       sources: ['facebook','twitter','linkedin'],
       email: true,
       copy: true,
-      visibility: 'scroll'
+      visibility: 'visible',
+      flatLayout: false
     } only %}
   {% endverbatim %}
 {% endset %}
