--- a/apps/pattern-lab/src/_patterns/02-components/share/05-share.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/share/05-share.twig
@@ -2,5 +2,6 @@
   sources: ['facebook','twitter','linkedin'],
   email: true,
   copy: true,
-  visibility: 'scroll'
+  visibility: 'visible',
+  flatLayout: false
 } only %}
