--- a/apps/pattern-lab/src/_patterns/02-components/backgrounds/10-background-opacity-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/backgrounds/10-background-opacity-variations.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-background/background.schema.yml') %}
+{% set schema = bolt.data.components['@bolt-components-background'].schema %}
 
 {% for opacity in schema.properties.opacity.enum %}
 <p>{{ opacity|capitalize }} Opacity</p>
