--- a/apps/pattern-lab/src/_patterns/02-components/breadcrumbs/00-breadcrumb-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/breadcrumbs/00-breadcrumb-docs.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-breadcrumb/breadcrumb.schema.yml') %}
+{% set schema = bolt.data.components['@bolt-components-breadcrumb'].schema %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-breadcrumb/breadcrumb.twig" with {
   "contentItems": [
