--- a/apps/pattern-lab/src/_patterns/02-components/buttons-group/00-button-group-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/buttons-group/00-button-group-docs.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-button-group/button-group.schema.yml') %}
+{% set schema = bolt.data.components['@bolt-components-button-group'].schema %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-button-group/button-group.twig" with {
   buttons: [
