--- a/apps/pattern-lab/src/_patterns/02-components/nav-bar/15-nav-bar-gradient-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/nav-bar/15-nav-bar-gradient-variation.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-nav-bar/nav-bar.schema.yml') %}
+{% set schema = bolt.data.components['@bolt-components-nav-bar'].schema %}
 
 {% for gradient in schema.properties.gradient.enum %}
   <p>Gradient: {{ gradient }}</p>
