--- a/apps/pattern-lab/src/_patterns/02-components/ordered-list/10-ordered-list-theme-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/ordered-list/10-ordered-list-theme-variation.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-ordered-list/ordered-list.schema.yml') %}
+{% set schema = bolt.data.components['@bolt-components-ordered-list'].schema %}
 
 {% for theme in schema.properties.theme.enum %}
   <p>Theme: {{ theme }}</p>
