--- a/apps/pattern-lab/src/_patterns/02-components/page-footer/00-page-footer-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/page-footer/00-page-footer-docs.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-page-header/page-header.schema.yml') %}
+{% set schema = bolt.data.components['@bolt-components-page-footer'].schema %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-page-footer/page-footer.twig" with {
   "content": content,
