--- a/apps/pattern-lab/src/_patterns/02-components/background-shapes/00-background-shapes-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/background-shapes/00-background-shapes-docs.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-background-shapes/background-shapes.schema.yml') %}
+{% set schema = bolt.data.components['@bolt-components-background-shapes'].schema %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-background-shapes/background-shapes.twig" with {
     "shapeGroup": "B"
