--- a/apps/pattern-lab/src/_patterns/02-components/blockquote/10-blockquote-alignItems-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/blockquote/10-blockquote-alignItems-variation.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-blockquote/blockquote.schema.yml') %}
+{% set schema = bolt.data.components['@bolt-components-blockquote'].schema %}
 
 {% for alignItems in schema.properties.alignItems.enum %}
   <p>alignItems: {{ alignItems }}</p>
