--- a/apps/pattern-lab/src/_patterns/02-components/blockquote/15-blockquote-indent-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/blockquote/15-blockquote-indent-variation.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-blockquote/blockquote.schema.yml') %}
+{% set schema = bolt.data.components['@bolt-components-blockquote'].schema %}
 
 {% for indent in schema.properties.indent.enum %}
   <p>Indent: {{ indent }}</p>
