--- a/apps/pattern-lab/src/_patterns/02-components/button/00-button-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/button/00-button-docs.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-button/button.schema.yml') %}
+{% set schema = bolt.data.components['@bolt-components-button'].schema %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-button/button.twig" with {
     "text": "Example Button"
