--- a/apps/pattern-lab/src/_patterns/02-components/button/05-button-rounded-options.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/button/05-button-rounded-options.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-button/button.schema.yml') %}
+{% set schema = bolt.data.components['@bolt-components-button'].schema %}
 
 {% for rounded in schema.properties.rounded.enum %}
   <p>{{ rounded|capitalize }} Button</p>
