--- a/apps/pattern-lab/src/_patterns/02-components/button/10-button-sizes.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/button/10-button-sizes.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-button/button.schema.yml') %}
+{% set schema = bolt.data.components['@bolt-components-button'].schema %}
 
 {% for size in schema.properties.size.enum %}
   <p>Button Size Variation: {{ size }}</p>
