--- a/apps/pattern-lab/src/_patterns/02-components/button/25-button-widths.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/button/25-button-widths.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-button/button.schema.yml') %}
+{% set schema = bolt.data.components['@bolt-components-button'].schema %}
 
 {% for width in schema.properties.width.enum %}
   <p>Button Width Variations: {{ width ? width : 'Default' }}</p>
