--- a/apps/pattern-lab/src/_patterns/02-components/button/35-button-align-items.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/button/35-button-align-items.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-button/button.schema.yml') %}
+{% set schema = bolt.data.components['@bolt-components-button'].schema %}
 
 {% for align in schema.properties.align.enum %}
   <p>Align: {{ align }}</p>
