--- a/apps/pattern-lab/src/_patterns/02-components/device-viewer/00-device-viewer-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/device-viewer/00-device-viewer-docs.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-device-viewer/device-viewer.schema.yml') %}
+{% set schema = bolt.data.components['@bolt-components-device-viewer'].schema %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-device-viewer/device-viewer.twig" with {
   device: "iphone8",
