--- a/apps/pattern-lab/src/_patterns/02-components/icon/00-icon-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/icon/00-icon-docs.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-icon/icon.schema.yml') %}
+{% set schema = bolt.data.components['@bolt-components-icon'].schema %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-icon/icon.twig" with {
   name: "add-open",
