--- a/apps/pattern-lab/src/_patterns/02-components/icon/15-icon-name-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/icon/15-icon-name-variation.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-icon/icon.schema.yml') %}
+{% set schema = bolt.data.components['@bolt-components-icon'].schema %}
 
 {# loop through icons referenced in schema #}
 <ul class="bolt-icon-list-demo">
