--- a/apps/pattern-lab/src/_patterns/02-components/page-header/00-page-header-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/page-header/00-page-header-docs.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-page-header/page-header.schema.yml') %}
+{% set schema = bolt.data.components['@bolt-components-page-header'].schema %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-page-header/_page-header.twig" with {
   "content": content,
