fix: Add workaround for overly aggressive resets in Drupal (WWWD-1438)

--- a/src/_patterns/02-components/bolt-form/src/form.scss
+++ b/src/_patterns/02-components/bolt-form/src/form.scss
@@ -100,6 +100,10 @@ $bolt-input-transition: $bolt-transition;
 @mixin bolt-input-placeholder($color) {
   &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     color: $color;
+
+    // Workaround for pega.com Drupal, which currently uses sanitize.css.  Once that's
+    // removed, the following line will be unnecessary.
+    opacity: 1;
   }
 
   &::-moz-placeholder { /* Firefox 19+ */
