--- a/packages/components/bolt-form/src/form.scss
+++ b/packages/components/bolt-form/src/form.scss
@@ -94,7 +94,8 @@ $bolt-input-border-color--invalid: bolt-color(error); // TODO: [Mai] This is the
 $bolt-input-border-width: $bolt-border-width;
 $bolt-input-border-style: $bolt-border-style;
 $bolt-input-border-radius: $bolt-border-radius;
-$bolt-input-box-shadow--focus: 0 0 0.35rem bolt-color(indigo, light);
+$bolt-input-box-shadow: bolt-color(indigo, light);
+$bolt-input-shadow-level: 'level-30';
 $bolt-input-transition: $bolt-transition;
 
 @mixin bolt-input-placeholder($color) {
@@ -171,7 +172,7 @@ $bolt-input-transition: $bolt-transition;
 
   &:focus,
   &:hover {
-    box-shadow: $bolt-input-box-shadow--focus;
+    @include bolt-shadow($key: $bolt-input-shadow-level, $base-color: $bolt-input-box-shadow);
   }
 
   &:focus {
@@ -281,13 +282,13 @@ $bolt-input-transition: $bolt-transition;
   &:focus ~ .c-bolt-inline-label,
   &:hover ~ .c-bolt-inline-label {
     &:before {
-      box-shadow: $bolt-input-box-shadow--focus;
+      @include bolt-shadow($key: $bolt-input-shadow-level, $base-color: $bolt-input-box-shadow);
     }
   }
 
   &:focus ~ .c-bolt-inline-label {
     &:before {
-      border-color: $bolt-input-border-color--focus;
+      @include bolt-shadow($key: $bolt-input-shadow-level, $base-color: $bolt-input-box-shadow);
     }
   }
 
@@ -477,7 +478,7 @@ $bolt-strength-indicator-transition: $bolt-transition;
   }
 
   &:focus + .c-bolt-toggle__item-label {
-    box-shadow: $bolt-input-box-shadow--focus;
+    @include bolt-shadow($key: $bolt-input-shadow-level, $base-color: $bolt-input-box-shadow);
   }
 }
 
